# winzy-screencapture

./: README.md  pyproject.toml
tests/: test_winzy_screencapture.py
winzy_screencapture/: __init__.py
